tests/ui/abi/bad-custom.stderr
error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:7:1
   |
LL | extern "custom" fn must_be_unsafe(a: i64) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | unsafe extern "custom" fn must_be_unsafe(a: i64) -> i64 {
   | ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:7:35
   |
LL | extern "custom" fn must_be_unsafe(a: i64) -> i64 {
   |                                   ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - extern "custom" fn must_be_unsafe(a: i64) -> i64 {
LL + extern "custom" fn must_be_unsafe() {
   |

error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:13:21
   |
LL | type MustbeUnsafe = extern "custom" fn(i64) -> i64;
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL | type MustbeUnsafe = unsafe extern "custom" fn(i64) -> i64;
   |                     ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:13:40
   |
LL | type MustbeUnsafe = extern "custom" fn(i64) -> i64;
   |                                        ^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type MustbeUnsafe = extern "custom" fn(i64) -> i64;
LL + type MustbeUnsafe = extern "custom" fn();
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:18:41
   |
LL | unsafe extern "custom" fn no_parameters(a: i64) {
   |                                         ^^^^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - unsafe extern "custom" fn no_parameters(a: i64) {
LL + unsafe extern "custom" fn no_parameters() {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:23:47
   |
LL | type NoParameters = unsafe extern "custom" fn(i64);
   |                                               ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type NoParameters = unsafe extern "custom" fn(i64);
LL + type NoParameters = unsafe extern "custom" fn();
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:27:47
   |
LL | unsafe extern "custom" fn no_return_type() -> i64 {
   |                                               ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - unsafe extern "custom" fn no_return_type() -> i64 {
LL + unsafe extern "custom" fn no_return_type() {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:32:52
   |
LL | type NoReturnType = unsafe extern "custom" fn() -> i64;
   |                                                    ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type NoReturnType = unsafe extern "custom" fn() -> i64;
LL + type NoReturnType = unsafe extern "custom" fn();
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:36:53
   |
LL | unsafe extern "custom" fn no_never_return_type() -> ! {
   |                                                     ^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - unsafe extern "custom" fn no_never_return_type() -> ! {
LL + unsafe extern "custom" fn no_never_return_type() {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:41:57
   |
LL | type NoNeverReturnType = unsafe extern "custom" fn() -> !;
   |                                                         ^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type NoNeverReturnType = unsafe extern "custom" fn() -> !;
LL + type NoNeverReturnType = unsafe extern "custom" fn();
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:44:36
   |
LL | unsafe extern "custom" fn not_both(a: i64) -> i64 {
   |                                    ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - unsafe extern "custom" fn not_both(a: i64) -> i64 {
LL + unsafe extern "custom" fn not_both() {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:50:42
   |
LL | type NotBoth = unsafe extern "custom" fn(i64) -> i64;
   |                                          ^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type NotBoth = unsafe extern "custom" fn(i64) -> i64;
LL + type NotBoth = unsafe extern "custom" fn();
   |

error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:56:5
   |
LL |     extern "custom" fn is_even(self) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL |     unsafe extern "custom" fn is_even(self) -> bool {
   |     ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:56:32
   |
LL |     extern "custom" fn is_even(self) -> bool {
   |                                ^^^^     ^^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL -     extern "custom" fn is_even(self) -> bool {
LL +     extern "custom" fn is_even() {
   |

error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:65:5
   |
LL |     extern "custom" fn bitwise_not(a: i64) -> i64 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL |     unsafe extern "custom" fn bitwise_not(a: i64) -> i64 {
   |     ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:65:36
   |
LL |     extern "custom" fn bitwise_not(a: i64) -> i64 {
   |                                    ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL -     extern "custom" fn bitwise_not(a: i64) -> i64 {
LL +     extern "custom" fn bitwise_not() {
   |

error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:76:5
   |
LL |     extern "custom" fn negate(a: i64) -> i64;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL |     unsafe extern "custom" fn negate(a: i64) -> i64;
   |     ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:76:31
   |
LL |     extern "custom" fn negate(a: i64) -> i64;
   |                               ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL -     extern "custom" fn negate(a: i64) -> i64;
LL +     extern "custom" fn negate();
   |

error: functions with the "custom" ABI must be unsafe
  --> $DIR/bad-custom.rs:82:5
   |
LL |     extern "custom" fn negate(a: i64) -> i64 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add the `unsafe` keyword to this definition
   |
LL |     unsafe extern "custom" fn negate(a: i64) -> i64 {
   |     ++++++

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:82:31
   |
LL |     extern "custom" fn negate(a: i64) -> i64 {
   |                               ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL -     extern "custom" fn negate(a: i64) -> i64 {
LL +     extern "custom" fn negate() {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:91:18
   |
LL |     fn increment(a: i64) -> i64;
   |                  ^^^^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL -     fn increment(a: i64) -> i64;
LL +     fn increment();
   |

error: foreign functions with the "custom" ABI cannot be safe
  --> $DIR/bad-custom.rs:94:5
   |
LL |     safe fn extern_cannot_be_safe();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: remove the `safe` keyword from this definition
   |
LL -     safe fn extern_cannot_be_safe();
LL +     fn extern_cannot_be_safe();
   |

error: function pointers cannot be declared with `safe` safety qualifier
  --> $DIR/bad-custom.rs:98:13
   |
LL | type Safe = safe extern "custom" fn();
   |             ^^^^
   |
help: remove the `safe` qualifier
   |
LL - type Safe = safe extern "custom" fn();
LL + type Safe = extern "custom" fn();
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:101:40
   |
LL | fn caller(f: unsafe extern "custom" fn(i64) -> i64, mut x: i64) -> i64 {
   |                                        ^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - fn caller(f: unsafe extern "custom" fn(i64) -> i64, mut x: i64) -> i64 {
LL + fn caller(f: unsafe extern "custom" fn(), mut x: i64) -> i64 {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:107:48
   |
LL | fn caller_by_ref(f: &unsafe extern "custom" fn(i64) -> i64, mut x: i64) -> i64 {
   |                                                ^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - fn caller_by_ref(f: &unsafe extern "custom" fn(i64) -> i64, mut x: i64) -> i64 {
LL + fn caller_by_ref(f: &unsafe extern "custom" fn(), mut x: i64) -> i64 {
   |

error: invalid signature for `extern "custom"` function
  --> $DIR/bad-custom.rs:113:40
   |
LL | type Alias = unsafe extern "custom" fn(i64) -> i64;
   |                                        ^^^     ^^^
   |
   = note: functions with the "custom" ABI cannot have any parameters or return type
help: remove the parameters and return type
   |
LL - type Alias = unsafe extern "custom" fn(i64) -> i64;
LL + type Alias = unsafe extern "custom" fn();
   |

error: functions with the "custom" ABI cannot be `async`
  --> $DIR/bad-custom.rs:127:1
   |
LL | async unsafe extern "custom" fn no_async_fn() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: remove the `async` keyword from this definition
   |
LL - async unsafe extern "custom" fn no_async_fn() {
LL + unsafe extern "custom" fn no_async_fn() {
   |

error: items with the "custom" ABI can only be declared externally or defined via naked functions
  --> $DIR/bad-custom.rs:127:1
   |
LL | async unsafe extern "custom" fn no_async_fn() {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: convert this to an `#[unsafe(naked)]` function
   |
LL + #[unsafe(naked)]
LL | async unsafe extern "custom" fn no_async_fn() {
   |

error[E0277]: expected an `Fn()` closure, found `unsafe extern "custom" fn()`
  --> $DIR/bad-custom.rs:132:64
   |
LL | fn no_promotion_to_fn_trait(f: unsafe extern "custom" fn()) -> impl Fn() {
   |                                                                ^^^^^^^^^ call the function in a closure: `|| unsafe { /* code */ }`
LL |
LL |     f
   |     - return type was inferred to be `unsafe extern "custom" fn()` here
   |
   = help: the trait `Fn()` is not implemented for `unsafe extern "custom" fn()`
   = note: wrap the `unsafe extern "custom" fn()` in a closure with no arguments: `|| { /* code */ }`
   = note: unsafe function cannot be called generically without an unsafe block

error: items with the "custom" ABI can only be declared externally or defined via naked functions
  --> $DIR/bad-custom.rs:44:1
   |
LL | unsafe extern "custom" fn not_both(a: i64) -> i64 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: convert this to an `#[unsafe(naked)]` function
   |
LL + #[unsafe(naked)]
LL | unsafe extern "custom" fn not_both(a: i64) -> i64 {
   |

error: items with the "custom" ABI can only be declared externally or defined via naked functions
  --> $DIR/bad-custom.rs:56:5
   |
LL |     extern "custom" fn is_even(self) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: convert this to an `#[unsafe(naked)]` function
   |
LL +     #[unsafe(naked)]
LL |     extern "custom" fn is_even(self) -> bool {
   |

error: items with the "custom" ABI can only be declared externally or defined via naked functions
  --> $DIR/bad-custom.rs:65:5
   |
LL |     extern "custom" fn bitwise_not(a: i64) -> i64 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: convert this to an `#[unsafe(naked)]` function
   |
LL +     #[unsafe(naked)]
LL |     extern "custom" fn bitwise_not(a: i64) -> i64 {
   |

error: items with the "custom" ABI can only be declared externally or defined via naked functions
  --> $DIR/bad-custom.rs:82:5
   |
LL |     extern "custom" fn negate(a: i64) -> i64 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: convert this to an `#[unsafe(naked)]` function
   |
LL +     #[unsafe(naked)]
LL |     extern "custom" fn negate(a: i64) -> i64 {
   |

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:103:14
   |
LL |     unsafe { f(x) }
   |              ^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:103:14
   |
LL |     unsafe { f(x) }
   |              ^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:109:14
   |
LL |     unsafe { f(x) }
   |              ^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:109:14
   |
LL |     unsafe { f(x) }
   |              ^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:117:14
   |
LL |     unsafe { f(x) }
   |              ^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:117:14
   |
LL |     unsafe { f(x) }
   |              ^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:139:20
   |
LL |         assert_eq!(not_both(21), 42);
   |                    ^^^^^^^^^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:139:20
   |
LL |         assert_eq!(not_both(21), 42);
   |                    ^^^^^^^^^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:142:29
   |
LL |         assert_eq!(unsafe { increment(41) }, 42);
   |                             ^^^^^^^^^^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:142:29
   |
LL |         assert_eq!(unsafe { increment(41) }, 42);
   |                             ^^^^^^^^^^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:145:17
   |
LL |         assert!(Thing(41).is_even());
   |                 ^^^^^^^^^^^^^^^^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:145:17
   |
LL |         assert!(Thing(41).is_even());
   |                 ^^^^^^^^^^^^^^^^^^^

error: functions with the "custom" ABI cannot be called
  --> $DIR/bad-custom.rs:148:20
   |
LL |         assert_eq!(Thing::bitwise_not(42), !42);
   |                    ^^^^^^^^^^^^^^^^^^^^^^
   |
note: an `extern "custom"` function can only be called using inline assembly
  --> $DIR/bad-custom.rs:148:20
   |
LL |         assert_eq!(Thing::bitwise_not(42), !42);
   |                    ^^^^^^^^^^^^^^^^^^^^^^

error[E0015]: inline assembly is not allowed in constant functions
  --> $DIR/bad-custom.rs:123:5
   |
LL |     std::arch::naked_asm!("")
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 41 previous errors

Some errors have detailed explanations: E0015, E0277.
For more information about an error, try `rustc --explain E0015`.
